fixed the z-index value

--- a/css/index.css
+++ b/css/index.css
@@ -180,6 +180,7 @@ img {
   background: #FFFFFF;
   border-bottom: 2px dashed #C0C0C0;
   position: fixed;
+  z-index: 2;
 }
 .main-navigation .nav-container {
   height: 100%;
