--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,7 +4,7 @@
   background: @main-bg;
   border-bottom: 2px dashed @navigation-border;
   position: fixed;
-
+  z-index: 2;
   .nav-container {
     height: 100%;
     display: flex;
@@ -32,8 +32,7 @@
         width: 100%;
         justify-content: space-around;
       }
-      
-      
+
       a {
         font-size: 1.6rem;
         color: @font-color;
